--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,3 +13,27 @@ jobs:
 
       - name: cargo clippy
         run: cargo clippy --all-targets -- -D warnings
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v4
+
+      - name: fetch deps
+        run: cargo fetch
+
+      - name: install cargo-llvm-cov
+        uses: taiki-e/install-action@cargo-llvm-cov
+
+      - name: build tests
+        run: cargo test --no-run
+
+      - name: run tests
+        run: cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info
+
+      - name: upload to codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: lcov.info
